--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "NodeJS",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node ./server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ksandrrr/NodeJS.git"
+  "engines": {
+    "node": "16.x"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ksandrrr/NodeJS/issues"
-  },
-  "homepage": "https://github.com/Ksandrrr/NodeJS#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1"
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "^16.3.1",
+    "express": "4.17.1",
+    "joi": "^17.9.2",
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "5.2.0",
+    "nodemon": "2.0.15"
   }
 }
